--- a/CSS/style.css
+++ b/CSS/style.css
@@ -58,25 +58,27 @@ body {
 }
 .button-container-2 {
     position: relative;
-    width: 100px;
-    height: 50px;
+    width: 10%;
+    height: 80px;
     margin-left: auto;
     margin-right: auto;
     margin-top: 7vh;
     overflow: hidden;
     border: 1px solid #000;
     font-family: "aaa";
-    font-weight: 300;
+    font-weight: 3000;
     transition: 0.5s;
     letter-spacing: 1px;
+
   }
+  
 
   .button-container-2 button {
   width: 101%;
   height: 100%;
   font-family: "aaa";
   font-weight: 300;
-  font-size: 20px;
+  font-size: 50px;
   letter-spacing: 1px;
   background: #000;
   -webkit-mask: url("https://raw.githubusercontent.com/robin-dela/css-mask-animation/master/img/urban-sprite.png");
@@ -93,8 +95,9 @@ body {
 
 
   .button-container-2 button:hover {
-    -webkit-animation: ani 0.7s steps(29) forwards;
-    animation: ani 0.7s steps(29) forwards;
+    -webkit-animation: ani 1s steps(29) forwards;
+    animation: ani 1s steps(29) forwards;
+  
   }
 
   .mas {
@@ -104,9 +107,8 @@ body {
     width: 101%;
     font-family: "aaa";
     font-weight: 300;
+    font-size: 50px;
     position: absolute;
-    font-size: 20px;
-    margin-top: 12px;
     overflow: hidden;
   }
 
