--- a/CSS/style.css
+++ b/CSS/style.css
@@ -3,6 +3,7 @@
     --main-color: black;
     --secondary-color: white;
     --hover-color: red;
+    --principal-font-size: 2em;
 }
 @font-face {
     font-family: "aaa";
@@ -25,7 +26,7 @@
     text-align: center;
 }
 body {
-    font-size: 2em;
+    font-size: var(--principal-font-size);
     position:absolute;
     width: 100%;
     font-family: "aaa";
@@ -58,7 +59,7 @@ ul {
     padding: 0;
     overflow: hidden;
     height: 100%;
-justify-content: center;
+    justify-content: center;
 
 }
 .link {
@@ -76,7 +77,7 @@ justify-content: center;
     text-decoration: none;
   }
   .link:hover {
-    background-color: #1b1b1b86;
+    background-color: #1b1b1b25;
   }
 .main-grid {
     
@@ -103,6 +104,13 @@ justify-content: center;
     }
 
 .index {
-    margin:auto
-    ;
+    text-align: center;
+    align-self: self-end;
+}
+.head-line {
+    background-color: #000;
+    color: var(--secondary-color);
+    margin-top: 10%;
+    width: 100%;
+    text-align: center;
 }
