--- a/CSS/style.css
+++ b/CSS/style.css
@@ -11,6 +11,7 @@
     src: url('../resources/fonts/zero_output/zerooutputDEMO.otf');
 
 }
+
 /*@import "tailwindcss";*/
 .hero {
 /*    font-size:2em;*/
@@ -32,12 +33,12 @@
 }
 
 .hero-text{
-    font-size: 10em;
+
     font-family: "aaa";
 }
 
 body {
-    font-size: var(--principal-font-size);
+    
     position:absolute;
     width: 100%;
     font-family: "aaa";
@@ -50,6 +51,27 @@ body {
     background-attachment: fixed;
     
 
+}
+h1 {
+  font-size: 10em;
+}
+h2 {
+  font-size: 7em;
+}
+h3 {
+  font-size: 5em;
+}
+h4 {
+  font-size: 4em;
+}
+h5 {
+  font-size: 3em;
+}
+h6, p{
+  font-size: 2em;
+}
+a{
+  font-size: 2em;
 }
 .nav {
     border-top: solid;
