--- a/CSS/stylecomunidad.css
+++ b/CSS/stylecomunidad.css
@@ -89,10 +89,11 @@ body {
 }
 .comentario {
     width: 80%;
-    background-color: rgb(82, 97, 92);
+    background-color: rgba(82, 97, 92, 0.808);
     margin: auto;
     color: rgb(253, 253, 253);
     border-radius: 20px;
-    padding: 15px;
+    padding: 10px;
     font-size: 2em;
+    box-shadow: 0px +19px rgba(90, 89, 89, 0.575);    
 }
