--- a/CSS/variables.css
+++ b/CSS/variables.css
@@ -4,9 +4,89 @@
     --hover-color: red;
     --principal-font-size: 2em;
 }
-/*@font-face {
 
-    font-family:"aaa";
+@font-face {
+
+    font-family: "aaa";
     src: url('../resources/fonts/zero_output/zerooutputDEMO.otf');
 
-}*/
+}
+
+h1 {
+    font-size: 10em;
+}
+
+h2 {
+    font-size: 7em;
+}
+
+h3 {
+    font-size: 5em;
+}
+
+h4 {
+    font-size: 4em;
+}
+
+h5 {
+    font-size: 3em;
+}
+
+h6,
+p,
+label,
+a {
+    font-size: 2em;
+}
+
+input,
+textarea {
+    font-size: 1.5em;
+
+}
+
+.nav {
+    border-top: solid;
+    border-bottom: solid;
+    border-color: var(--secondary-color);
+    width: 100%;
+
+    background-color: var(--main-color);
+
+
+}
+
+nav {
+    height: 8vh;
+}
+
+.ulnav {
+    display: flex;
+    width: 100%;
+    list-style-type: none;
+    margin: auto;
+    padding: 0;
+    overflow: hidden;
+    height: 100%;
+    justify-content: center;
+
+}
+
+.link {
+    width: 100%;
+    transition: background-color, color 0.5s ease;
+
+}
+
+li a {
+
+    display: block;
+    color: var(--secondary-color);
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+.link:hover {
+    background-color: #1b1b1b25;
+}
