--- a/CSS/contacto.css
+++ b/CSS/contacto.css
@@ -37,7 +37,7 @@ body {
     width: 100%;
     height: 100vh;
     font-family: "aaa";
-    background-image: url('/resources/images/dientes.webp');
+    background-image: url('../resources/images/dientes.webp');
     background-size: cover;
     background-position: fixed;
     background-repeat: no-repeat;
