--- a/CSS/style.css
+++ b/CSS/style.css
@@ -186,39 +186,92 @@ body {
   }
 
 
-  .historia {
-    width: 100%;
-    color: var(--secondary-color);
-    margin-top: 5%;
-
-  }
-
-  .historia-content {
-    width: 70%;
-    margin: auto;
-    display: flex;
-    transition: all 0.5s ease;
-  }
+.historia {
+  width: 100%;
+  color: var(--secondary-color);
+  margin-top: 5%;
+}
+.historia-content {
+  width: 70%;
+  margin: auto;
+  display: flex;
+  transition: all 0.5s ease;
+}
   .historia-content:hover {
     background-color: rgba(47, 79, 79, 0.377);
     border-radius: 500px;
     box-shadow: 0 2px 400px darkslategrey;
+  }
+.historia-content-img{
+  width: 50%;
+  margin: auto;
+}
+.historia-content img {
+  border: 3px white outset;
+  
+}
+.historia-content-text {
+  width: 50%;
+  margin: 5%;
+}
 
+
+
+
+@media (max-width: 1020px) {
+  .main-grid {
+    grid-template-columns: repeat(2 , 1fr);
   }
 
-  .historia-content-img{
-    width: 50%;
-    margin: auto;
+  .historia-content-img {
+    display: none;
   }
 
-  .historia-content img {
-    border: 3px white outset;
-    
+  .historia-content {
+    display: flex;
+    flex-direction: column;  
+    width: 90%;
+    margin: 0 auto 30px;     
+    padding: 20px;           
+    position: relative;      
+    background-size: cover;
+    background-position: center;
+  }
+  .historia-content:hover {
 
+    border-radius: 0px;
+    box-shadow: 0 2px 100px darkslategrey;
   }
 
   .historia-content-text {
-    width: 50%;
-    margin: 5%;
+    position: static;
+    margin: 0;
+    z-index: 1;             
+    background-color: rgba(0,0,0,0.4);
+    padding: 15px;
+    border-radius: 8px;
   }
+
+  /* Esto me ha ayudado la ia */
+  .historia-content:nth-of-type(1) {
+    background-image: url('../resources/images/stroma-isla.png');
+  }
+  .historia-content:nth-of-type(2) {
+    background-image: url('../resources/images/lobo-sombras.png');
+  }
+  .historia-content:nth-of-type(3) {
+    background-image: url('../resources/images/barca2.png');
+  }
+}
+
+
+@media (max-width: 768px) {
+  .main-grid {
+    grid-template-columns: 1fr;
+  }
+  .historia-content-text {
+    width: 100%;
+  }
+}
+
 
