--- a/CSS/variables.css
+++ b/CSS/variables.css
@@ -199,14 +199,14 @@ li a {
     }
 }
 
-.footer-descarga-link {
+.footer-descarga {
   color: inherit;
   text-decoration: none;
   transition: color 0.3s ease;
 }
 
-.footer-descarga-link:hover {
-  color: #ffffff;
+.footer-descarga:hover {
+  color: var(--hover-color);
 }
 
 
