--- a/CSS/variables.css
+++ b/CSS/variables.css
@@ -47,6 +47,59 @@ textarea {
     font-size: 1.5em;
 
 }
+/*hamburguesa*/
+.h-nav {
+  display: none;
+}
+.menu-toggle {
+  display: none;
+  position: fixed;
+  top: 16px;
+  left: 16px;
+  width: 32px;
+  height: 32px;
+  border: none;
+  background: transparent;
+  cursor: pointer;
+  z-index: 9200;
+}
+
+.menu-toggle .bar {
+  display: block;
+  width: 100%;
+  height: 4px;
+  margin: 4px 0;
+  background-color: var(--secondary-color);
+  transition: 0.3s;
+  z-index: 9100;
+}
+@media (max-width: 768px) {
+  /*hamburguesa*/
+  .nav {
+    display: none;
+  }
+  .h-nav {
+    display:block;
+  }
+  .h-ulnav {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    background: var(--main-color);
+    flex-direction: column;
+    align-items: center;
+    max-height: 0;
+    overflow: hidden;
+    z-index: 9000;
+  }
+  .menu-toggle {
+    display: block;
+  }
+  .h-ulnav.open {
+    max-height: 100vh;
+  }
+}
 
 /* Header */
 .header {
@@ -89,7 +142,7 @@ nav {
     transition: background-color, color 0.5s ease;
 
 }
-.link-selected {
+.link-selected, .h-link-selected {
     width: 100%;
     transition: background-color, color 0.5s ease, border-radius, 0.5s ease ;
     background-color: rgba(255, 0, 0, 0.322) ;
@@ -113,7 +166,7 @@ li a {
     text-decoration: none;
 }
 
-.link:hover {
+.link:hover, .h-link:hover {
     color: var(--hover-color);
     background-color: #1b1b1b25;
 }
@@ -135,14 +188,7 @@ li a {
   text-align: center;
 }
 
-@media (min-width: 768px) {
-  .footer-container {
-    grid-template-columns: repeat(3, 1fr);
-    text-align: left;
-  }
-}
 
-/* --- Títulos y subtítulos --- */
 .footer-title {
   font-weight: 1rem;
   margin-bottom: 0.75rem;
@@ -154,7 +200,6 @@ li a {
   margin-bottom: 0.5rem;
 }
 
-/* --- Texto y listas --- */
 .footer-text, .footer-list {
   font-size: 2rem;
   margin-bottom: 0.5rem;
@@ -171,9 +216,8 @@ li a {
   margin-top: 0.25rem;
 }
 
-/* --- Enlace de contacto --- */
 .footer-link {
-  color: #63b3ed; /* azul claro */
+  color: #63b3ed; 
   text-decoration: none;
 }
 
@@ -181,7 +225,6 @@ li a {
   text-decoration: underline;
 }
 
-/* --- Redes sociales --- */
 .footer-descarga {
   display: flex;
   justify-content: center;
