--- a/CSS/contacto.css
+++ b/CSS/contacto.css
@@ -49,7 +49,7 @@ body {
 
 textarea {
     box-sizing: content-box;
-    width: 400px;
+    width: 95%;
     height: 70px;
     padding: 10px;
     border: 1px solid #ccc;
@@ -57,6 +57,7 @@ textarea {
     resize: none;
     box-shadow: 0 2px 500px var(--hover-color);
 }
+
 
 #enviar:hover {
     background-color: #1b1b1b25;
