--- a/CSS/stylecomunidad.css
+++ b/CSS/stylecomunidad.css
@@ -1,99 +1,103 @@
-@font-face {
-    font-family:"aaa";
-    src: url('../resources/fonts/zero_output/zerooutputDEMO.otf');
-}
 
-.hero-text{
-    font-size: 10em;
-    font-family: "aaa";
-}
 
 body {
-    position:absolute;
     width: 100%;
-    font-family: "aaa";
-
-
 }
 .principal {
-    width: 100%;
     height: 100vh;
+    width: 100%;
     display: flex;
-    flex-direction: row;
     background-image: url('../resources/images/faro.jpeg');
     background-size: cover;
     background-position:fixed;
     background-repeat: no-repeat;
     background-attachment: fixed;
-    width: 100%;
 }
 
 .divizquierdo{
     width: 50%;
-    background-color: transparent;
-    position: absolute;
-    left: 0px;
+
 }
 .divizquierdo h2 {
     text-align: center;
-    margin-top: 100px;
-    font-size: 12em;
     color: rgb(219, 55, 55);
 }
 .divderecho {
     width: 50%;
-    background-color: transparent;
-    position: absolute;
-    right: 0px;
-    
-    
 }
 .divderecho h2 {
  text-align: center;
- margin-top: 100px;
- font-size: 12em;
  color: rgb(219, 55, 55);
 }
 
-.divizquierdo h2 {
-    text-align: center;
-    margin-top: 100px;
-    font-size: 12em;
-    color: rgb(219, 55, 55);
-   }
-
-.main-grid {
-    margin: auto;
+#formulari-comentari {
     width: 70%;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-auto-rows: minmax(80px, auto);
-    grid-gap: 30px;
-    
+    margin: auto;
 }
-.grid-content {
+input, textarea {
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    padding: 10px;
     width: 100%;
-    
-    border-radius: 20px;
-    box-shadow: 0, 0, 20px white;
-    
+    margin: auto;
+    margin-bottom: 10px;
+    border: 1px solid var(--secondary-color);
+    border-radius: 5px;
+    box-shadow: 0 2px 700px var(--hover-color);
+
 }
-.comentarios {
+input:focus,
+textarea:focus {
+    background-color: #201717;
+    border-color: red;
+    outline: none;
+    color: var(--secondary-color);
+}
+form {
+    max-width: 500px;
+    margin: 0 auto;
+    justify-content: center;
+    align-items: center;
+    padding: 40px;
+    color: white;
+}
+#enviarComentari {
+    width: 100%;
+    color: var(--secondary-color);
+    border: 1px solid var(--secondary-color);
+    border-radius: 5px;
+    font-size: x-large;
+    transition: all 0.5s ease;
+}
+#enviarComentari:hover {
+    background-color: #1b1b1b25;
+    color: var(--secondary-color);
+    border: 1px solid var(--hover-color);
+    ;
 
 }
 
-.usuario {
-    font-weight:lighter;
-    color: black;
-    
+#comentario {
+    margin-top: 10%;
+    margin-bottom: 10%;
+    height: 30em;
+    line-height: 1.5em;
+    overflow-x: hidden;
+    overflow-y: scroll;
+    width: 100%;
+    border: 1px solid white;
+    border-radius:20px ;
 }
+
 .comentario {
     width: 80%;
     background-color: rgba(82, 97, 92, 0.808);
-    margin: auto;
+    margin: 3% auto;
     color: rgb(253, 253, 253);
     border-radius: 20px;
     padding: 10px;
-    font-size: 2em;
-    box-shadow: 0px +19px rgba(90, 89, 89, 0.575);    
+}
+
+.nom3 h5 {
+    color: var(--hover-color);
 }
