--- a/CSS/styledescargas.css
+++ b/CSS/styledescargas.css
@@ -1,119 +1,62 @@
-@font-face {
-    font-family:"aaa";
-    src: url('../resources/fonts/zero_output/zerooutputDEMO.otf');
-}
-
-.hero-text{
-    font-size: 10em;
-    font-family: "aaa";
-}
-
 body {
-    position:absolute;
-    width: 100%;
-    font-family: "aaa";
-
-
-}
-.principal {
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    flex-direction: row;
-    background-image: url('../resources/images/faro.jpeg');
+    background-image: url('../resources/images/barca2.png');
     background-size: cover;
     background-position:fixed;
     background-repeat: no-repeat;
     background-attachment: fixed;
-    width: 100%;
+    color: var(--secondary-color);
 }
 
-.divizquierdo{
-    width: 50%;
-    background-color: transparent;
-    position: absolute;
-    left: 0px;
-}
-.divizquierdo h2 {
-    text-align: center;
-    margin-top: 100px;
-    color: var(--hover-color);
-}
-.divderecho {
-    width: 50%;
-    background-color: transparent;
-    position: absolute;
-    right: 0px;
-    
-    
-}
-.divderecho h2 {
- text-align: center;
- margin-top: 100px;
- font-size: 12em;
- color: var(--hover-color);
-}
-
-.divizquierdo h2 {
-    text-align: center;
-    margin-top: 100px;
-    font-size: 12em;
-    color: var(--hover-color);
-   }
-
-.divizquierdo ul {
-    text-align: center;
-    margin-top: 10px;
-    font-size: 2em;
-    color: var(--hover-color);
-    text-align: left;
-  
-}
-.divizquierdo li {
-    text-align: center;
-    margin-top: 10px;
-    font-size: 2em;
-    color: var(secondary-color);
-
-  
-}
-.divderecho h3 {
-    text-align: center;
-    margin-top: 50px;
-    font-size: 8em;
-    color: var(--hover-color);
-   }
-
-
-.botondescarga {
-    width: 50%;
+.descarga, .descarga2, body > h4 {
+    display: flex;
+    width: 70%;
     margin: auto;
-    height: 200px;
-    background-image: url('../resources/images/itchioimg.jpg');
-    background-size: cover;
-    border-radius: 30px;
-    
+    margin-top: 5%;
+    margin-bottom: 5%;
 }
-.botondescarga button {
+
+.descarga-img {
     width: 100%;
-    height: 100%;
+    margin:  auto;
+}
+.descarga-boton {
+    width: 50%;
+    line-height: 2em;
+    padding: 2%;
+    margin-top: 20px;
+}
+
+button {
+    width: 80px;
+    padding: 3px;
+    transition: all 0.3s ease;
+    border: 3px solid red;
+}
+
+button:hover {
+    color: red;
+    background-color: rgba(27, 25, 25, 0.329);
+    border:double ;
     cursor: pointer;
 }
 
 
-.main-grid {
-    margin: auto;
-    width: 70%;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-auto-rows: minmax(80px, auto);
-    grid-gap: 30px;
-    
+.trailer, .requisitos {
+    line-height: 3em;
+    width: 50%;
+    align-self: center;
 }
-.grid-content {
-    width: 100%;
-    
-    border-radius: 20px;
-    box-shadow: 0, 0, 20px white;
-    
+
+.requisitosUl {
+    font-size: 3rcap;
+    list-style:circle;
+}
+
+@media(max-width:768px) {
+    .descarga, .descarga2 {
+        flex-direction: column;
+    }
+    .descarga-img, .descarga-boton, .requisitos, .trailer {
+        width: 100%;
+    }
 }
